--- a/home.html
+++ b/home.html
@@ -13,16 +13,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/home.css" rel="stylesheet">
     <link href="css/loader.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container d-flex flex-column align-items-center mt-5">
-        <!-- <div id="camera-preview" style="height: 200px; width: 200px; border: 1px solid white;"> </div> -->
-
-        <h2 id="codigo" style="top: 1rem; text-align: center; color: rgb(255, 255, 255); font: bold;"> CODIGO </h2>
-
-        <!-- <button type="button" class="btn btn-primary ml-auto mr-auto w-50" style="position: absolute; bottom: 3rem; text-align: center; font-size: x-large;" onclick="scann()"> SCANEAR </button> -->
-
+    <div class="container d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
+        <div class="mb-3">
+            <img src="img/logo.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+        </div>
+        <button type="button" class="btn btn-primary mb-3 w-50" onclick="scanBarcode()"> Escanear <i class="bi bi-camera"></i></button>
+        <button type="button" class="btn btn-primary mt-3 w-50" onclick="showInputCode()"> Ingresar Código <i class="bi bi-search"></i></button>
     </div>
 
     <script src="cordova.js"></script>
@@ -36,21 +35,39 @@
 		<span class="loader"></span>
 		<span class="loaderBack"></span>
 	</div>
+    
+    <div class="modal" id="inputCodeModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="inputCodemodalTitle">Ingrese un código</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" >
+                    <input id="inputCodeModalInput" type="number" class="form-control" placeholder="Codigo..." onkeypress="if(event.key === 'Enter') findProductByCode()"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="inputCodeModalButton" onclick="findProductByCode()" class="btn btn-primary"> Buscar </button>
+                    <!-- <button type="button" class="btn btn-primary" data-bs-dismiss="modal"> Save changes</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="modal" id="barcodeModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Resultado</h5>
+                    <h5 class="modal-title" id="modalTitle">Resultado</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <p id="barcodeResult" style="display: none;"></p>
-                    <p id="barcodeFormat" style="display: none;"></p>
-                    <p id="resultAPI"></p>
+                <div class="modal-body" style="display: flex; flex-direction: column; align-items: center;">
+                    <!-- <p id="barcodeResult" style="display: none;"></p>
+                    <p id="barcodeFormat" style="display: none;"></p> -->
+                    <p id="resultAPI" style="font-size: large; font-weight: bold;"></p>
                     <p id="codigoAPI"> CODIGO: </p>
                     <p id="nombreAPI"> NOMBRE: </p>
-                    <p id="importeAPI"> IMPORTE: </p>
+                    <p id="importeAPI" style="font-size: x-large; color:red; font-weight: bold;"> IMPORTE: </p>
                     <p id="ventaAPI"> VENTA: </p>
                     <p id="descuentoAPI"> DESCUENTO: </p>
                     <p id="bonificaAPI"> BONIFICA: </p>
